manifests/converter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
  namespace: jahnvisrivastava100
  labels:
    component: converter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: converter
  template:
    metadata:
      labels:
        app: converter
    spec:
      containers:
      - name: converter
        image: ghcr.io/adyanth/docker-k8s-final-assessment:converter-latest
        ports:
        - containerPort: 8080
---
