manifests/counter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-deployment
  namespace: jahnvisrivastava100
  labels:
    component: counter
spec:
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
      - name: counter
        image: ghcr.io/adyanth/docker-k8s-final-assessment:counter-latest
        ports:
        - containerPort: 8080
