manifests/converter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-converter
  namespace: jahnvisrivastava100
  labels:
    component: converter
spec:
  selector:
    app: converter
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
